--- a/src/scss/admin/_layout/sidebar.scss
+++ b/src/scss/admin/_layout/sidebar.scss
@@ -3,3 +3,7 @@
 @import "~@coreui/coreui/scss/coreui";
 @import '~@coreui/icons/css/coreui-icons.css';
 @import "~font-awesome/css/font-awesome.css";
+
+.header_layout{
+  ;
+}
