--- a/src/scss/admin/_layout/sidebar.scss
+++ b/src/scss/admin/_layout/sidebar.scss
@@ -4,6 +4,6 @@
 @import '~@coreui/icons/css/coreui-icons.css';
 @import "~font-awesome/css/font-awesome.css";
 
-.header_layout{
-  ;
+#myID{
+  left: 80% ;
 }
